@@ -14,6 +14,7 @@ PHP                                                                        NEWS
 - Fixed bug #34449 (ext/soap: XSD_ANYXML functionality not exposed). (Dmitry)
 - Fixed bug #34199 (if($obj)/if(!$obj) inconsistency because of cast handler).
   (Dmitry, Alex)
+- Fixed bug #32179 (xmlrpc_encode() segfaults with recursive references). (Tony)
 
 05 Sep 2005, PHP 5.0.5
 - Upgraded PCRE library to version 5.0. (Andrei)
